--- a/package.json
+++ b/package.json
@@ -3,12 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "assert": "^2.1.0",
+    "aws-sdk": "^2.1669.0",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.4.3",
+    "fflate": "^0.8.1",
+    "javascript-time-ago": "^2.5.10",
+    "mathjs": "^11.11.2",
+    "moment": "^2.29.4",
+    "rc-slider": "^10.6.2",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-magnifier": "^3.0.4",
+    "react-scripts": "^5.0.1",
+    "react-slider": "^2.0.6",
+    "react-time-ago": "^7.3.1",
+    "stream": "^0.0.2",
+    "styled-components": "^6.1.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
