--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
     "aws-sdk": "^2.1669.0",
+    "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.7",
     "fflate": "^0.8.1",
@@ -45,6 +46,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "browserslist": {
     "production": [
