--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "javascript-time-ago": "^2.5.10",
     "mathjs": "^11.11.2",
     "moment": "^2.29.4",
+    "prime-factors": "^0.1.0",
     "rc-slider": "^10.6.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
