--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
   "name": "fracto-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.14.17",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^7.0.1",
+    "@mui/styled-engine-sc": "^7.0.1",
     "@react-oauth/google": "^0.12.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "assert": "^2.1.0",
-    "aws-sdk": "^2.1669.0",
-    "axios": "^1.7.9",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "buffer": "^6.0.3",
-    "chart.js": "^4.4.7",
-    "fflate": "^0.8.1",
-    "javascript-time-ago": "^2.5.10",
-    "mathjs": "^11.11.2",
-    "moment": "^2.29.4",
+    "chart.js": "^4.4.8",
+    "fflate": "^0.8.2",
+    "javascript-time-ago": "^2.5.11",
+    "mathjs": "^14.4.0",
+    "moment": "^2.30.1",
     "prime-factors": "^0.1.0",
-    "rc-slider": "^10.6.2",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "rc-slider": "^11.1.8",
+    "rc-tree": "^5.13.1",
+    "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
     "react-magnifier": "^3.0.4",
     "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
-    "react-time-ago": "^7.3.1",
-    "stream": "^0.0.2",
-    "styled-components": "^6.1.1",
+    "react-time-ago": "^7.3.3",
+    "stream": "^0.0.3",
+    "styled-components": "^6.1.16",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node prepare_scripts.js && react-scripts start",
+    "build": "node prepare_scripts.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
