power sets functional

--- a/public/comp_data/files_manifest.json
+++ b/public/comp_data/files_manifest.json
@@ -1,22 +1,1 @@
-[
-  "rational_powers_2-31.csv",
-  "rational_powers_32-50.csv",
-  "rational_powers_51-69.csv",
-  "rational_powers_70-91.csv",
-  "rational_powers_92-115.csv",
-  "rational_powers_116-145.csv",
-  "rational_powers_146-180.csv",
-  "rational_powers_181-223.csv",
-  "rational_powers_224-275.csv",
-  "rational_powers_276-337.csv",
-  "rational_powers_338-413.csv",
-  "rational_powers_414-507.csv",
-  "rational_powers_508-621.csv",
-  "rational_powers_622-761.csv",
-  "rational_powers_762-932.csv",
-  "rational_powers_933-1141.csv",
-  "rational_powers_1142-1397.csv",
-  "rational_powers_1398-1711.csv",
-  "rational_powers_1712-2095.csv",
-  "rational_powers_2096-2500.csv"
-]
+["rational_powers_2-26.csv","rational_powers_27-41.csv","rational_powers_42-57.csv","rational_powers_58-74.csv","rational_powers_75-95.csv","rational_powers_96-119.csv","rational_powers_120-148.csv","rational_powers_149-182.csv","rational_powers_183-224.csv","rational_powers_225-275.csv","rational_powers_276-337.csv","rational_powers_338-413.csv","rational_powers_414-507.csv","rational_powers_508-621.csv","rational_powers_622-761.csv","rational_powers_762-932.csv","rational_powers_933-1141.csv","rational_powers_1142-1397.csv","rational_powers_1398-1711.csv","rational_powers_1712-2095.csv","rational_powers_2096-2565.csv","rational_powers_2566-3141.csv","rational_powers_3142-3847.csv","rational_powers_3848-4711.csv","rational_powers_4712-5000.csv"]
