--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "fracto-app",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "dependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
@@ -37,7 +36,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-magnifier": "^3.0.4",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
     "react-time-ago": "^7.3.3",
     "stream": "^0.0.3",
@@ -59,7 +58,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/register": "^7.27.1"
+    "@babel/register": "^7.27.1",
+    "ajv": "^7.2.4"
   },
   "browserslist": {
     "production": [
