--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.28.0",
-    "@babel/preset-react": "^7.27.1",
-    "@babel/register": "^7.27.1",
+    "@babel/node": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "babel": "^6.23.0",
+    "babel-loader": "^10.0.0",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.9",
     "fflate": "^0.8.2",
@@ -59,6 +60,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
     "@babel/register": "^7.27.1",
     "ajv": "^7.2.4"
   },
