--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "babel-loader": "^10.0.0",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.9",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "fflate": "^0.8.2",
+    "google-one-tap": "^1.0.6",
     "javascript-time-ago": "^2.5.11",
     "mathjs": "^14.4.0",
     "megahash": "^1.0.5",
     "moment": "^2.30.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prime-factors": "^0.1.0",
     "rc-slider": "^11.1.8",
     "rc-tree": "^5.13.1",
