--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel": "^6.23.0",
     "babel-loader": "^10.0.0",
     "buffer": "^6.0.3",
+    "canvas": "^3.2.0",
     "chart.js": "^4.4.9",
+    "exif-js": "^2.3.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "fflate": "^0.8.2",
