--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "buffer": "^6.0.3",
     "canvas": "^3.2.0",
     "chart.js": "^4.4.9",
+    "codegen": "^0.1.0",
     "exif-js": "^2.3.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -36,8 +37,6 @@
     "mathjs": "^14.4.0",
     "megahash": "^1.0.5",
     "moment": "^2.30.1",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
     "prime-factors": "^0.1.0",
     "rc-slider": "^11.1.8",
     "rc-tree": "^5.13.1",
@@ -70,7 +69,7 @@
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@babel/register": "^7.27.1",
-    "ajv": "^7.2.4"
+    "ajv": "^8.17.1"
   },
   "browserslist": {
     "production": [
