--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
-    "@babel/register": "^7.27.1",
-    "ajv": "^8.17.1"
+    "@babel/register": "^7.27.1"
   },
   "browserslist": {
     "production": [
